updated Course Outline.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "pdfvuer": "^1.7.5",
+    "vue": "^2.6.11",
+    "vue-pdf": "^4.2.0"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
